# validador_app

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/tools/: carga.js  categos.js  columns.js  compara.js  grid.js  subir.js  utils.js
