[package]
name = "validador"
version = "1.0.6"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "validador_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
polars = {version = "0.53", features = ["lazy", "csv", "json", "dtype-date", "temporal", "strings", "polars-ops", "regex"] }
chardetng = "1"
encoding_rs = "0.8"
regex = "1"
unicode-normalization = "0.1"
sha2 = "0.11"
hex = "0.4"
tauri-plugin-dialog = "2.7.1"
dirs = "6"
reqwest = {version = "0.13.4", features = ["json", "gzip", "brotli", "deflate", "query"] }
tokio = {version = "1", features = ["full"] }
futures = "0.3"
russh = { version = "0.61"}
russh-sftp = "2.0"
tempfile = "3"
